--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "eslint": "^6.7.2",
-    "jest": "24.9.0",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1",
     "supertest": "^4.0.2"
   },
