--- a/.eslintrc
+++ b/.eslintrc
@@ -6,11 +6,16 @@
   "env": {
     "es6": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "browser": true
   },
   "extends": [
     "eslint:recommended"
   ],
+  "globals": {
+    "localStorage": true,
+    "fetch": true
+},
   "rules": {
     "no-console": "warn",
     "indent": [
